Added params support for translations

--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -33,3 +33,5 @@ vote_multiple_allowed: "Mehrfache Abstimmungen sind erlaubt."
 update_available_player_join: "Eine neue Version des PollMaster-Plugins ist verfügbar."
 current_version: "Aktuelle Version: "
 new_version: "Neue Version: "
+new_poll_created: "Eine neue Umfrage wurde von ${playername} erstellt"
+new_poll_created_subtitle: "Um diese Umfrage anzusehen, gib /vote ${pollid} ein"
