--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -33,3 +33,5 @@ vote_multiple_allowed: "Multiple votes are allowed."
 update_available_player_join: "A new version of the PollMaster plugin is available."
 current_version: "Current version: "
 new_version: "New version: "
+new_poll_created: "A new poll has been created by ${playername}"
+new_poll_created_subtitle: "To view this poll, type /vote ${pollid}"
